--- a/apps/templates/home/profile-original.html
+++ b/apps/templates/home/profile-original.html
@@ -8,23 +8,23 @@
 {% block content %}
 
   <div class="container-fluid">
-    <div class="page-header min-height-300 border-radius-xl mt-4" style="background-image: url('/static/assets/img/pizza_profile.jpg'); background-position-y: 50%;">
-      <!-- <span class="mask bg-gradient-primary opacity-6"></span> -->
+    <div class="page-header min-height-300 border-radius-xl mt-4" style="background-image: url('/static/assets/img/curved-images/curved0.jpg'); background-position-y: 50%;">
+      <span class="mask bg-gradient-primary opacity-6"></span>
     </div>
     <div class="card card-body blur shadow-blur mx-4 mt-n6 overflow-hidden">
       <div class="row gx-4">
         <div class="col-auto">
           <div class="avatar avatar-xl position-relative">
-            <img src="/static/assets/img/chef-avatar.jpg" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+            <img src="/static/assets/img/bruce-mars.jpg" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
           </div>
         </div>
         <div class="col-auto my-auto">
           <div class="h-100">
             <h5 class="mb-1">
-              Bruno Barbieri
+              Alec Thompson
             </h5>
             <p class="mb-0 font-weight-bold text-sm">
-              Chef
+              CEO / Co-Founder
             </p>
           </div>
         </div>
@@ -98,7 +98,7 @@
   </div>
   <div class="container-fluid py-4">
     <div class="row">
-      <!-- <div class="col-12 col-xl-4">
+      <div class="col-12 col-xl-4">
         <div class="card h-100">
           <div class="card-header pb-0 p-3">
             <h6 class="mb-0">Platform Settings</h6>
@@ -249,7 +249,7 @@
             </ul>
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="col-12 mt-4">
         <div class="card mb-4">
           <div class="card-header pb-0 p-3">
@@ -266,7 +266,7 @@
                     </a>
                   </div>
                   <div class="card-body px-1 pb-0">
-                    <p class="text-gradient text-dark mb-2 text-sm">Receipt #2</p>
+                    <p class="text-gradient text-dark mb-2 text-sm">Project #2</p>
                     <a href="javascript:;">
                       <h5>
                         Modern
