--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -1,4 +1,19 @@
-  
+<footer class="footer pt-3  ">
+  <div class="container-fluid">
+    <div class="row align-items-center justify-content-lg-between">
+      <div class="col-lg-6 mb-lg-0 mb-4">
+        <div class="copyright text-center text-sm text-muted text-lg-start">
+          &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold" target="_blank">AiFame Inc.</a>
+          coded by Andrea, Mich and Davide
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+
+<!--   
   <footer class="footer py-5">
     <div class="container">
       <div class="row">
@@ -41,4 +56,4 @@
       </div>
     </div>
   </footer>
-  
+   -->
