--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -7,7 +7,7 @@
                 coded by Andrea, Mich and Davide
               </div>
             </div>
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
               <ul class="nav nav-footer justify-content-center justify-content-lg-end">
                 <li class="nav-item">
                   <a href="#" class="nav-link text-muted" target="_blank">Download</a>
@@ -19,7 +19,7 @@
                   <a href="#" class="nav-link text-muted" target="_blank">Donate</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </footer>
