--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -1,8 +1,8 @@
-<div class="container position-sticky z-index-sticky top-0">
+<!-- <div class="container position-sticky z-index-sticky top-0">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12"> -->
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
+        <!-- <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid">
             <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " 
                target="_blank" 
@@ -33,8 +33,8 @@
               </ul>
             </div>
           </div>
-        </nav>
+        </nav> -->
         <!-- End Navbar -->
-      </div>
+      <!-- </div>
     </div>
-  </div>
+  </div> -->
