--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -67,7 +67,7 @@
           <span class="nav-link-text ms-1">Food Inventory</span>
         </a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link {% if 'billing' in segment %} active {% endif %}" href="/billing.html">
           <div
             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -92,7 +92,7 @@
           </div>
           <span class="nav-link-text ms-1">Billing</span>
         </a>
-      </li>
+      </li> -->
       <!-- <li class="nav-item">
           <a class="nav-link {% if 'virtual-reality' in segment %} active {% endif %}" href="/virtual-reality.html">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -135,9 +135,9 @@
             <span class="nav-link-text ms-1">RTL</span>
           </a>
         </li> -->
-      <li class="nav-item mt-3">
+      <!-- <li class="nav-item mt-3">
         <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account</h6>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
           <div
@@ -175,7 +175,7 @@
             <span class="nav-link-text ms-1">Logout</span>
           </a>
         </li> -->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="">
           <div
             class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -197,7 +197,7 @@
           <span class="nav-link-text ms-1">Settings</span>
         </a>
       </li>
-    </ul>
+    </ul> -->
     <!-- </div>
     <div class="sidenav-footer mx-3 ">
       <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
